# DariusInfer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
log/: darius.INFO  darius.c76e2ea01f56.root.log.INFO.20250106-140352.7049  darius.c76e2ea01f56.root.log.INFO.20250106-140516.7157  darius.c76e2ea01f56.root.log.INFO.20250108-121113.2987  darius.c76e2ea01f56.root.log.INFO.20250111-045106.163  darius.c76e2ea01f56.root.log.INFO.20250111-050422.306  darius.c76e2ea01f56.root.log.INFO.20250111-092951.542  darius.c76e2ea01f56.root.log.INFO.20250111-094335.644  darius.c76e2ea01f56.root.log.INFO.20250111-094435.746  darius.c76e2ea01f56.root.log.INFO.20250111-094444.833  darius.c76e2ea01f56.root.log.INFO.20250111-094454.920  darius.c76e2ea01f56.root.log.INFO.20250111-094459.1021  darius.c76e2ea01f56.root.log.INFO.20250111-094516.1133  darius.c76e2ea01f56.root.log.INFO.20250111-094803.1245  darius.c76e2ea01f56.root.log.INFO.20250111-094803.1310  darius.c76e2ea01f56.root.log.INFO.20250111-095017.1405  darius.c76e2ea01f56.root.log.INFO.20250111-095017.1470  darius.c76e2ea01f56.root.log.INFO.20250111-095030.1565  darius.c76e2ea01f56.root.log.INFO.20250111-095030.1630  darius.c76e2ea01f56.root.log.INFO.20250111-095505.1872  darius.c76e2ea01f56.root.log.INFO.20250111-095506.1937  darius.c76e2ea01f56.root.log.INFO.20250111-095520.2017  darius.c76e2ea01f56.root.log.INFO.20250111-095520.2082  darius.c76e2ea01f56.root.log.INFO.20250111-095747.2180  darius.c76e2ea01f56.root.log.INFO.20250111-100938.2303  darius.c76e2ea01f56.root.log.INFO.20250111-100938.2368  (+32 more)
source/: tensor.cpp
(+8 files in other folders)
